# AgentSwitchboard

./: .gitignore  AGENTS.md  AgentSwitchboard-Technician-Bootstrap.cmd  AgentSwitchboard.cmd  CAPABILITIES.md  CLAUDE.md  CODEBASE_MAP.md  Configure-NapSprint.cmd  Contextualize-AppOutput.cmd  Install-AgentSwitchboard-Tmux-Launchers.cmd  Install-AgentSwitchboardPi.cmd  Install-BlacksmithGuildNightPanel.cmd  Install-TechnicianLiveCertShortcuts.cmd  Install-TmuxNewInstanceShortcut.cmd  Open-AgentSwitchboard-Continue.cmd  Open-AgentSwitchboard-New.cmd  Open-TechnicianLiveCertEvidence.cmd  Pull-And-Run-AgentSwitchboard.cmd  Pull-Repo-And-Setup-AgentSwitchboard.cmd  README.md  Repair-OpenCodeFreeDefaults.cmd  Repair-ProviderRoutedGnhf.cmd  Repair-Technician-AGY.cmd  Repair-Technician-Command-Shims.cmd  Repair-Technician-OpenCode.cmd  Repair-Technician-WSL-Ubuntu.cmd  Repair-Technician-WezTerm.cmd  Run-ChatGPTDesktopGnhfSprint.cmd  Run-CursorGnhfSprint.cmd  Run-Technician-LiveCert.cmd  Run-WindowsWorkstationLiveProof.cmd  SKILLS.md  Select-AgentSwitchboardPrompt.cmd  Setup-AgentSwitchboard.cmd  Setup-TmuxGnhfWorkspace.cmd  Start-AgentSwitchboardPi.cmd  Start-NapSprint.cmd  TRIGGERS.md  Technician-LiveCert-P00-Preflight.cmd  Technician-LiveCert-P01-Network.cmd  (+11 more)
.ai/: agent-contract.json
.githooks/: pre-commit.ps1
.pi/: settings.json
agentswitchboard/: __main__.py  cli.py  contract.py
diagrams/: agentic-software-factory.mmd
docs/: add_event_observer_prompts.py  check_gnhf.py  generate_from_spreadsheet.py  generate_from_website.py  prompt-kit.html  prompt-kit.js  (+2 more)
(+499 files in other folders)
